--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="title_area">Supervisor</h1>
         <p class="paragraph_area">Monitors activity to identify project roadblocks</p>
         <div class="img">
-        <img src="./images/icon-supervisor.svg" class="img_area">
+        <img src="icon-supervisor.svg" class="img_area">
       </div>
       </div>
 
@@ -35,7 +35,7 @@
         <h1 class="title_area">Team Builder</h1>
         <p class="paragraph_area">Scans our talent network to create the optimal team for your project</p>
         <div class="img">
-        <img src="./images/icon-team-builder.svg" class="img_area">
+        <img src="icon-team-builder.svg" class="img_area">
       </div>
       </div>
 
@@ -43,7 +43,7 @@
         <h1 class="title_area">Karma</h1>
         <p class="paragraph_area">Regularly evaluates our talent to ensure quality</p>
         <div class="img">
-        <img src="./images/icon-karma.svg" class="img_area">
+        <img src="icon-karma.svg" class="img_area">
       </div>
       </div>
 
@@ -51,7 +51,7 @@
         <h1 class="title_area">Calculator</h1>
         <p class="paragraph_area">Uses data from past projects to provide better delivery estimates</p>
         <div class="img">
-        <img src="./images/icon-calculator.svg" class="img_area">
+        <img src="icon-calculator.svg" class="img_area">
       </div>
       </div>
 
